--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "word-chain",
+  "name": "wordchain",
   "version": "1.0.0",
-  "description": "Accepts start and end words, and builds a word chain between them.",
+  "description": "A simple word chain application using NodeJS and MongoDB.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "Kenny Grage",
+  "author": "Dugalsg",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^5.2.0",
-    "request": "^2.86.0"
+    "express": "^4.17.1",
+    "mongoose": "^5.8.11",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.1"
   }
 }
