--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple word chain application using NodeJS and MongoDB.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest"
   },
   "author": "Dugalsg",
   "license": "ISC",
